@@ -1,4 +1,5 @@
 ver 0.16.6 (2010/??/??)
+* event_pipe: fix WIN32 regression
 
 
 ver 0.16.5 (2010/10/09)
